Keep track of exectution times.

--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -42,7 +42,7 @@
 			}
 		</style>
 
-		<script type="module" src="./js/console-log.js"></script>
+		<!-- <script type="module" src="./js/console-log.js"></script> -->
 		<script type="module" src="./js/index.js"></script>
 	</head>
 
