--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
 		<script type="module" src="./js/version.js"></script>
 		<script type="module" src="./js/index-parallel.js"></script>
 		<script type="module" src="./js/index-serial.js"></script>
+		<script type="module" src="./js/index-mixed.js"></script>
 		<script>
 			function show_code(url) {
 				window.open(url, 'popupWindow', 'width=600,height=400,scrollbars=yes');
@@ -27,6 +28,10 @@
 			<div class="btn-wrapper">
 				<i class="fas fa-code" id="codeIcon" onclick="show_code('./js/index-serial.js')"></i>
 				<button onclick="demo_serial_execution()">Serial Execution</button>
+			</div>
+			<div class="btn-wrapper">
+				<i class="fas fa-code" id="codeIcon" onclick="show_code('./js/index-mixed.js')"></i>
+				<button onclick="demo_mixed_execution()">Mixed Example</button>
 			</div>
 		</div>
 		<div id="console"></div>
