--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,6 +13,7 @@
 		<script type="module" src="./js/index-demo02.js"></script>
 		<script type="module" src="./js/index-demo03.js"></script>
 		<script type="module" src="./js/index-demo04.js"></script>
+		<script type="module" src="./js/index-random.js"></script>
 		<script>
 			function show_code(url) {
 				window.open(url, 'popupWindow', 'width=600,height=400,scrollbars=yes');
@@ -34,10 +35,14 @@
 				<i class="fas fa-code" id="codeIcon" onclick="show_code('./js/index-demo03.js')"></i>
 				<button id="demo03" onclick="demo_demo03()">demo03</button>
 			</div>
-			<div class="btn-wrapper">
+			<!-- <div class="btn-wrapper">
 				<i class="fas fa-code" id="codeIcon" onclick="show_code('./js/index-demo04.js')"></i>
 				<button id="demo04" onclick="demo_demo04()">demo04</button>
 			</div>
+			<div class="btn-wrapper">
+				<i class="fas fa-code" id="codeIcon" onclick="show_code('./js/index-random.js')"></i>
+				<button id="demo00" onclick="document['demo_demo00']()">demo00</button>
+			</div> -->
 		</div>
 		<div id="console"></div>
 	</body>
