--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,14 +35,14 @@
 				<i class="fas fa-code" id="codeIcon" onclick="show_code('./js/index-demo03.js')"></i>
 				<button id="demo03" onclick="demo_demo03()">demo03</button>
 			</div>
-			<!-- <div class="btn-wrapper">
+			<div class="btn-wrapper">
 				<i class="fas fa-code" id="codeIcon" onclick="show_code('./js/index-demo04.js')"></i>
 				<button id="demo04" onclick="demo_demo04()">demo04</button>
 			</div>
 			<div class="btn-wrapper">
 				<i class="fas fa-code" id="codeIcon" onclick="show_code('./js/index-random.js')"></i>
 				<button id="demo00" onclick="document['demo_demo00']()">demo00</button>
-			</div> -->
+			</div>
 		</div>
 		<div id="console"></div>
 	</body>
